basic structure almost done

--- a/index.html
+++ b/index.html
@@ -9,8 +9,27 @@
     <title>Document</title>
 </head>
 <body>
+    <header class="header">
+        <h1 id="headerlogo">Header Logo</h1>
+        <h2 id="header1">header link one</h2>
+        <h2 id ="header2">header link two </h2>
+        <h2 id="header3">header link three</h2>
+    </header>
     <div>
-<div class="top"></div>
+<div class="top">
+    <div class="topmain">
+<div id="mainpara">
+    <h1 id="head1">This website is  <br> awesome</h1>
+    <p id="para1">This website have some subtext that goes under the <br>
+        main title.It's a smaller font and the color is lower <br> contrast </p>
+    <button id="buttonid">Sign up</button>
+</div>
+<div id="imgbox">
+    
+</div>
+
+    </div>
+</div>
 <div class="mid1"></div>
 <div class="mid2"></div>
 <div class="mid3">
